--- a/themes/reo/scss/specifics/page_modules/_featured_work.scss
+++ b/themes/reo/scss/specifics/page_modules/_featured_work.scss
@@ -136,7 +136,7 @@ Featured Work
     &__link-icon {
         display: inline-flex;
         line-height: normal;
-        margin-left: 15px;
+        margin-left: 5px;
         fill: $color-blue;
         width: 15px;
 
